tests/error/comptime/allocation2.bz
// error: invalid free: allocation has already been freed
// note: while evaluating expression at compile time
// note: address points to this allocation
// note: allocation was made while evaluating expression at compile time
// note: allocation was freed here
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let p = __builtin_comptime_malloc(int32, 1);
		__builtin_comptime_free(p);
		__builtin_comptime_free(p);
	});
}
